--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">JOINME</string>
+    <string name="user_name">Weilin</string>
+    <string name="home_page">主頁</string>
+    <string name="self_page">個人頁面</string>
+    <string name="activity_page">活動頁面</string>
+    <string name="friends_page">好友頁面</string>
+    <string name="logout">登出</string>
+    <string name="login">登入</string>
+    <string name="account">帳號</string>
+    <string name="password">密碼</string>
+    <string name="register">註冊</string>
+    <string name="forget_pwd">忘記密碼</string>
 </resources>
