--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,24 @@
     <string name="friends_page">好友頁面</string>
     <string name="logout">登出</string>
     <string name="login">登入</string>
+    <string name="forget_pwd">忘記密碼</string>
     <string name="account">帳號</string>
     <string name="password">密碼</string>
     <string name="register">註冊</string>
-    <string name="forget_pwd">忘記密碼</string>
+    <string name="email">信箱</string>
+    <string name="verification_code">驗證碼</string>
+    <string name="verify">驗證</string>
+    <string name="title_activity_homepage">homepage</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
+    <string name="home_second">Home Second</string>
 </resources>
