--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
     <string name="travel">旅遊</string>
     <string name="information">限時</string>
     <string name="actcontenct">鬥牛啦 時間：2020/04/31 18:00 地點：高雄大學路307號 備註：風雨球場</string>
+    <string name="acttitle">鬥牛啦</string>
+    <string name="actdetail">時間：2020/04/31 18:00 地點：高雄大學路307號 備註：風雨球場</string>
+    <string name="sigin">報名</string>
 
 </resources>
