update that user can be positioned,and key point suffering has been done but it hasn't been tested and added to project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="addfriend">+好友</string>
     <string name="friend">好友</string>
     <string name="activity_history">活動紀錄</string>
+    <string name="title_activity_maps2">Map</string>
     <!--    <string name="google_maps_key"></string>-->
 
 
