--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,8 @@
     <string name="join">我參加的</string>
     <string name="nearact">附近活動</string>
     <string name="ballsort">球類</string>
-    <string name="eating">吃飯</string>
-    <string name="travel">旅遊</string>
+    <string name="disaccount">商家優惠</string>
+    <string name="singing">ktv</string>
     <string name="information">限時</string>
     <string name="actcontenct">鬥牛啦 時間：2020/04/31 18:00 地點：高雄大學路307號 備註：風雨球場</string>
     <string name="acttitle">鬥牛啦</string>
