--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="title_activity_maps2">Map</string>
     <string name="facebook_app_id">576207433007230</string>
     <string name="fb_login_protocol_scheme">fb576207433007230</string>
+    <string name="notice">通知</string>
     <!--    <string name="google_maps_key"></string>-->
 
 
