--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="facebook_app_id">576207433007230</string>
     <string name="fb_login_protocol_scheme">fb576207433007230</string>
     <string name="notice">通知</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--    <string name="google_maps_key"></string>-->
 
 
