加上搜尋功能資料目前為空 須從資料庫抓 剩下全部介面調整成glide抓圖片 地圖切換類別需重畫地標

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="holdon">我舉辦的</string>
     <string name="join">我參加的</string>
     <string name="nearact">附近活動</string>
-    <string name="ballsort">球類</string>
+    <string name="ballsort">運動</string>
     <string name="disaccount">商家優惠</string>
     <string name="singing">ktv</string>
     <string name="information">限時</string>
